--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'java'
     id 'application'
@@ -40,7 +39,9 @@ extraJavaModuleInfo {
         exports("org.jnativehook")
         exports("org.jnativehook.keyboard")
         exports("org.jnativehook.mouse")
-
+    }
+    module("createshortcut.jar", "shortcutMachine", "1.0") {
+        exports("createshortcut")
     }
 }
 
@@ -50,7 +51,7 @@ dependencies {
 
     implementation('com.1stleg:jnativehook:2.1.0')
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
-    compile fileTree(dir: 'libs', includes: ['*.jar'])
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
@@ -59,7 +60,6 @@ test {
     useJUnitPlatform()
     modularity.inferModulePath = true
 }
-
 
 
 jlink {
