--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
     mavenCentral()
 }
 
+version("1.1.0")
+
 ext {
     junitVersion = '5.8.2'
 }
@@ -47,11 +49,11 @@ extraJavaModuleInfo {
 
 dependencies {
 
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-
     implementation('com.1stleg:jnativehook:2.1.0')
-    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
-    implementation 'org.apache.logging.log4j:log4j:2.20.0'
+    implementation('org.xerial:sqlite-jdbc:3.41.2.2')
+    implementation('org.apache.logging.log4j:log4j-core:2.17.1')
+    implementation('org.apache.logging.log4j:log4j-api:2.17.1')
+
     implementation fileTree(dir: 'libs', includes: ['*.jar'])
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
